# j2gbc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
action/: Dockerfile
assets/ui/: debugger.glade
cpal_audio/: Cargo.toml
frontend_utils/: Cargo.toml
frontend_utils/src/: lib.rs
gtk_frontend/: Cargo.toml
gtk_frontend/src/: debugger.rs  event.rs  loader.rs  logger.rs  main.rs
j2gbc/: Cargo.toml  build.rs  conformance_tests.toml  mmu_exceptions.toml
j2gbc/src/: alu.rs  audio.rs  cart.rs  cpu.rs  debug.rs  error.rs  input.rs  inst.rs  lcd.rs  lib.rs  mem.rs  mmu.rs  mmu_exceptions.rs  system.rs  timer.rs
j2gbc/src/audio/: mixer.rs  mod.rs  noise.rs  square.rs  synth.rs  wave.rs
j2gbc/src/cpu/: interrupt.rs  mod.rs  register.rs  test.rs
j2gbc/src/inst/: arith.rs  bits.rs  control.rs  load.rs  logic.rs  mod.rs
j2gbc/src/lcd/: bg.rs  fb.rs  mod.rs  obj.rs  scanline.rs  tile.rs
j2gbc/src/mbc/: mbc0.rs  mbc1.rs  mbc5.rs  mod.rs
j2gbc/tests/: conformance.rs
j2gbc_gfx/: Cargo.toml
j2gbc_gfx/shader/: lcd_frag.glsl
j2gbc_gfx/src/: audio.rs  debugger.rs  event.rs  loader.rs  logger.rs  main.rs  render.rs  save.rs  timer.rs  ui.rs
j2gbc_gfx/src/render/: lcd.rs  mod.rs  ui.rs
j2gbc_sdl/: Cargo.toml
j2gbc_sdl/src/: main.rs
j2gbc_sdl/src/ui/: audio.rs  debug.rs  fb.rs  mod.rs
minifb_frontend/: Cargo.toml
minifb_frontend/src/: main.rs
src/: alu.rs  audio.rs  cart.rs  cpu.rs  inst.rs  lcd.rs  main.rs  mem.rs
src/emu/: alu.rs  audio.rs  cart.rs  cpu.rs  debug.rs  input.rs  inst.rs  lcd.rs  mem.rs  mmu.rs  mod.rs  system.rs  timer.rs  util.rs
src/emu/audio/: mixer.rs  mod.rs  noise.rs  square.rs  synth.rs  wave.rs
src/emu/cpu/: interrupt.rs  mod.rs  register.rs  test.rs
src/emu/inst/: arith.rs  bits.rs  control.rs  load.rs  logic.rs  mod.rs
src/emu/mbc/: mbc1.rs  mod.rs
src/mbc/: mbc1.rs
src/ui/: audio.rs  debug.rs  fb.rs  mod.rs
