[package]
name = "gtk_frontend"
version = "0.1.0"
description = "A Game Boy Color emulator (GTK frontend)"
authors = ["Jennifer Wilcox <jennifer@nitori.org>"]
edition = "2018"

[dependencies]
j2gbc = { path = "../j2gbc" }
cpal_audio = { path = "../cpal_audio" }
frontend_utils = { path = "../frontend_utils" }
log = "^0.4.10"
lazy_static = "^1.4.0"
j2ds = "^0.3.0"
gdk-pixbuf = "^0.9.0"
glib = "^0.10.2"
gdk = "^0.13.2"
enclose = "^1.1.8"
clap = "^2.33.0"

[dependencies.gtk]
version = "^0.9.2"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
