[package]
name = "j2gbc_gfx"
version = "0.1.0"
authors = ["Jennifer Wilcox <jennifer@nitori.org>"]
edition = "2018"

[dependencies]
j2gbc = { path = "../j2gbc" }
log = "*"
lazy_static = "*"
cpal = "*"
hound = "*"
j2ds = "*"
clap = "*"
gdk-pixbuf = "*"
glib = "*"
gdk = "*"
enclose = "*"

[dependencies.gtk]
version = "0.7.1"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
