[package]
name = "j2gbc_gfx"
version = "0.1.0"
description = "A Game Boy Color emulator (GTK frontend)"
authors = ["Jennifer Wilcox <jennifer@nitori.org>"]
edition = "2018"

[dependencies]
j2gbc = { path = "../j2gbc" }
log = "^0.4.10"
lazy_static = "^1.4.0"
cpal = "^0.10.0"
hound = "^3.4.0"
j2ds = "^0.3.0"
clap = "^2.33.0"
gdk-pixbuf = "^0.8.0"
glib = "^0.9.0"
gdk = "^0.12.0"
enclose = "^1.1.8"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
